--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "crypto-js": "^4.1.1",
     "express": "^4.17.1"
   }
